<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_create"
        tools:context=".createRecetas">

        <TextView
            android:id="@+id/text_name_receta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/search_name_receta"
            android:textColor="@color/background_splash"
            android:textSize="20sp"
            android:layout_marginTop="90dp"
            android:background="@drawable/esquina_redondeada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edit_name_platillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:hint="@string/text_hint_receta_name"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColor="@color/cafe"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name_receta" />

        <TextView
            android:id="@+id/text_tipo_de_platillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/search_type_platillo"
            android:textColor="@color/background_splash"
            android:textSize="20sp"
            android:background="@drawable/esquina_redondeada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name_platillo"  />


        <CheckBox
            android:id="@+id/radioBtn_plato_fuerte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2E1705"
            android:text="@string/checkBox_plato_fuerte"
            android:textColor="#95490E"
            android:textSize="20dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_tipo_de_platillo" />

        <CheckBox
            android:id="@+id/radioBtn_sopas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2E1705"
            android:text="@string/checkBox_sopas"
            android:textColor="#95490E"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/text_tipo_de_platillo" />

        <CheckBox
            android:id="@+id/radioBtn_postres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2E1705"
            android:text="@string/checkBox_postres"
            android:textColor="#95490E"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioBtn_sopas" />

        <TextView
            android:id="@+id/text_especificaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/search_especificaciones"
            android:textColor="@color/background_splash"
            android:textSize="20sp"
            android:background="@drawable/esquina_redondeada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioBtn_postres"/>

        <EditText
            android:id="@+id/edit_num_personas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:hint="@string/text_hint_num_personas"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_especificaciones" />

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:hint="@string/text_hint_time"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/text_especificaciones" />

        <TextView
            android:id="@+id/text_dificultad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/search_dificultad"
            android:textColor="@color/background_splash"
            android:textSize="20sp"
            android:background="@drawable/esquina_redondeada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_time"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/text_dificultad">
        <RadioButton
            android:id="@+id/radioBtn_facil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2E1705"
            android:text="@string/checkBox_dificil"
            android:textColor="#95490E"
            android:textSize="20dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_dificultad" />

            <RadioButton
                android:id="@+id/radioBtn_medio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#2E1705"
                android:text="@string/checkBox_medio"
                android:textColor="#95490E"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/text_dificultad" />

            <RadioButton
            android:id="@+id/radioBtn_dificil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2E1705"
            android:text="@string/checkBox_facil"
            android:textColor="#95490E"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioBtn_medio" />
        </RadioGroup>



        <TextView
            android:id="@+id/text_ingredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/search_ingredientes"
            android:textColor="@color/background_splash"
            android:textSize="20sp"
            android:background="@drawable/esquina_redondeada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group"/>

        <EditText
            android:id="@+id/edit_ingredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:hint="@string/text_hint_ingredientes"
            android:inputType="textMultiLine|textAutoComplete"
            android:lines="5"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_ingredientes"/>

        <TextView
            android:id="@+id/text_Preparacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/search_preparacion"
            android:textColor="@color/background_splash"
            android:textSize="20sp"
            android:background="@drawable/esquina_redondeada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_ingredientes"/>
        <EditText
            android:id="@+id/edit_preparacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:hint="@string/text_hint_preparacion"
            android:inputType="textMultiLine|textAutoComplete"
            android:lines="5"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Preparacion"/>

        <Button
            android:id="@+id/btn_create_receta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_create_receta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_preparacion" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>